Removed unused components - removed integrations - updated to v4

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -4,7 +4,7 @@
       x-data="{ open: false }"
       class="relative flex flex-col w-full py-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6">
       <div class="flex flex-row items-center justify-between lg:justify-start">
-        <a href="/" class="lg:pr-8 text-black inline-flex items-center gap-3">
+        <a href="/" class=" text-black inline-flex items-center gap-3">
           <svg
             width="50"
             height="49"
