--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -62,7 +62,7 @@
         <img
           alt=""
           class="relative w-full border lg:rounded-2xl object-cover rounded shadow-2xl"
-          src="https://linear.app/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Fhero%404x.15e3a396.jpg&w=3840&q=75"
+          src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
         />
       </div>
     </div>
